--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -94,6 +94,8 @@
       &--back {
          transform: rotateY(180deg);
       }
+   }
+   .hover {
       &:hover &--front,
       &:focus &--front {
          z-index: 0;
